force-app/main/default/objects/zaapit__zaapit_editable_table2__c/zaapit__zaapit_editable_table2__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>zaapit_editable_table2</label>
</CustomObject>