force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Amount_field_For_Graphs__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Amount_field_For_Graphs__c</fullName>
    <label>Amount field For Graphs</label>
    <length>150</length>
    <type>Text</type>
</CustomField>