force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__buttons__c.field-meta.xml
<CustomField>
    <fullName>zaapit__buttons__c</fullName>
    <description>add custom javascript buttons
name~javascript#name~javascript#name~javascript#.....</description>
    <inlineHelpText>add custom javascript buttons</inlineHelpText>
    <label>buttons</label>
    <type>TextArea</type>
</CustomField>