force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__columnsWidth__c.field-meta.xml
<CustomField>
    <fullName>zaapit__columnsWidth__c</fullName>
    <label>columnsWidth</label>
    <type>TextArea</type>
</CustomField>