force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__CustomActionLink__c.field-meta.xml
<CustomField>
    <fullName>zaapit__CustomActionLink__c</fullName>
    <inlineHelpText>format: link-Text~https://na14.salesforce.com/{0}/e?close=1~tool tip text(optional)
{0} is the rowID</inlineHelpText>
    <label>CustomActionLink</label>
    <type>TextArea</type>
</CustomField>