force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__customLinksOnReadMode__c.field-meta.xml
<CustomField>
    <fullName>zaapit__customLinksOnReadMode__c</fullName>
    <description>Format: salesforce_field~salesforce_field_ID#salesforce_field~salesforce_field_ID..
The &quot;salesforce_field_ID&quot; will be the link on the text of &quot;salesforce_field&quot;</description>
    <inlineHelpText>Format: salesforce_field~salesforce_field_ID#salesforce_field~salesforce_field_ID..
The &quot;salesforce_field_ID&quot; will be the link on the text of &quot;salesforce_field&quot;</inlineHelpText>
    <label>customLinksOnReadMode</label>
    <type>TextArea</type>
</CustomField>