force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__disable_autosave_views__c.field-meta.xml
<CustomField>
    <fullName>zaapit__disable_autosave_views__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Disable auto save views</description>
    <label>disable_autosave_views</label>
    <type>Checkbox</type>
</CustomField>