force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Disable_formula_fields_groupings__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Disable_formula_fields_groupings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable formula fields groupings</label>
    <type>Checkbox</type>
</CustomField>