force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__DisableGeoMaps__c.field-meta.xml
<CustomField>
    <fullName>zaapit__DisableGeoMaps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Geo Maps for smart Instant graphs</description>
    <label>DisableGeoMaps</label>
    <type>Checkbox</type>
</CustomField>