force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Enable_Sort_coloring__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Enable_Sort_coloring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Sort coloring: use Sort_color1 &amp; Sort_color2 custom labels to change the colors</description>
    <inlineHelpText>Enable Sort coloring: use Sort_color1 &amp; Sort_color2 custom labels to change the colors</inlineHelpText>
    <label>Enable Sort coloring</label>
    <type>Checkbox</type>
</CustomField>