force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__EnableFieldValueCss__c.field-meta.xml
<CustomField>
    <fullName>zaapit__EnableFieldValueCss__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Field Value Css</description>
    <label>EnableFieldValueCss</label>
    <type>Checkbox</type>
</CustomField>