force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__EnableHorizontalScroll__c.field-meta.xml
<CustomField>
    <fullName>zaapit__EnableHorizontalScroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableHorizontalScroll</label>
    <type>Checkbox</type>
</CustomField>