force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Exclude_Fields_From_Total__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Exclude_Fields_From_Total__c</fullName>
    <description>Exclude Fields From Total</description>
    <inlineHelpText>Exclude Fields From Total - use # as a sepeartor</inlineHelpText>
    <label>Exclude Fields From Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>