force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__export_to_url__c.field-meta.xml
<CustomField>
    <fullName>zaapit__export_to_url__c</fullName>
    <description>export_to_url, empty is disable
example: https://zaapit.xxx.visual.force.com
Use this option only with custom developments / communities...</description>
    <label>export_to_url</label>
    <type>TextArea</type>
</CustomField>