force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__external_JS_include__c.field-meta.xml
<CustomField>
    <fullName>zaapit__external_JS_include__c</fullName>
    <label>external_JS_include</label>
    <type>TextArea</type>
</CustomField>