force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__fields2__c.field-meta.xml
<CustomField>
    <fullName>zaapit__fields2__c</fullName>
    <description>the second field the holds the fields</description>
    <label>fields2</label>
    <type>TextArea</type>
</CustomField>