force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__fieldsHeaders2__c.field-meta.xml
<CustomField>
    <fullName>zaapit__fieldsHeaders2__c</fullName>
    <label>fieldsHeaders2</label>
    <type>TextArea</type>
</CustomField>