force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__FilterReplaceLabelName__c.field-meta.xml
<CustomField>
    <fullName>zaapit__FilterReplaceLabelName__c</fullName>
    <description>Use a label for substituting none-translated pulldowns
Label format:pulldown value~translated value#pulldown value1~translated value1#</description>
    <label>FilterReplaceLabelName</label>
    <type>TextArea</type>
</CustomField>