force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__freezeColumn__c.field-meta.xml
<CustomField>
    <fullName>zaapit__freezeColumn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>freezeColumn</label>
    <type>Checkbox</type>
</CustomField>