force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Hide_graph_link_on_filter__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Hide_graph_link_on_filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide graph link on filter</description>
    <label>Hide graph link on filter</label>
    <type>Checkbox</type>
</CustomField>