force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hide_multi_value_filters__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hide_multi_value_filters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide multi value filters</label>
    <type>Checkbox</type>
</CustomField>