force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hideChooseATableLink__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hideChooseATableLink__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Choose A Table Link (on top right)</description>
    <label>hideChooseATableLink</label>
    <type>Checkbox</type>
</CustomField>