force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hideEditButton__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hideEditButton__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Edit Button</description>
    <label>hideEditButton</label>
    <type>Checkbox</type>
</CustomField>