force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hideEditDelColumn__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hideEditDelColumn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide edit &amp; delete links on read-only column</description>
    <label>hideEditDelColumn</label>
    <type>Checkbox</type>
</CustomField>