force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hideNewAndDelete__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hideNewAndDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide New &amp; Delete Buttons on edit mode</description>
    <label>hideNewAndDelete</label>
    <type>Checkbox</type>
</CustomField>