force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hidePageNumbers__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hidePageNumbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hidePageNumbers</label>
    <type>Checkbox</type>
</CustomField>