force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hideTopFilterSave__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hideTopFilterSave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hideTopFilterSave</label>
    <type>Checkbox</type>
</CustomField>