force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__hideTotalsRow__c.field-meta.xml
<CustomField>
    <fullName>zaapit__hideTotalsRow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Totals Row</description>
    <label>hideTotalsRow</label>
    <type>Checkbox</type>
</CustomField>