force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__include_page_name__c.field-meta.xml
<CustomField>
    <fullName>zaapit__include_page_name__c</fullName>
    <description>Page to include on the top of the table.</description>
    <inlineHelpText>Page to include on the top of the table.</inlineHelpText>
    <label>include page name</label>
    <type>TextArea</type>
</CustomField>