force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__loadfilter_maxResRows__c.field-meta.xml
<CustomField>
    <fullName>zaapit__loadfilter_maxResRows__c</fullName>
    <defaultValue>250</defaultValue>
    <label>loadfilter maxResRows</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>