force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__LogicExtend__c.field-meta.xml
<CustomField>
    <fullName>zaapit__LogicExtend__c</fullName>
    <inlineHelpText>EventName~classNameSpace~ClassName#EventName2~classNameSpace2~ClassName2
The Class must Implement ZPTableHandler</inlineHelpText>
    <label>LogicExtend</label>
    <type>TextArea</type>
</CustomField>