force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__mainFieldSubQueryPre__c.field-meta.xml
<CustomField>
    <fullName>zaapit__mainFieldSubQueryPre__c</fullName>
    <label>mainFieldSubQueryPre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>