force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Max_rows_for_formula_grouping__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Max_rows_for_formula_grouping__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>The maximum number of rows for calculating filter-groupings (large values may take more time to calculate).</description>
    <inlineHelpText>The maximum number of rows for calculating filter-groupings (large values may take more time to calculate).</inlineHelpText>
    <label>Max rows for formula grouping</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>