force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__maxRowsPerPage__c.field-meta.xml
<CustomField>
    <fullName>zaapit__maxRowsPerPage__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum displayed rows</description>
    <inlineHelpText>Maximum displayed rows</inlineHelpText>
    <label>maxRowsPerPage</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>