force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__More_Actions_Link__c.field-meta.xml
<CustomField>
    <fullName>zaapit__More_Actions_Link__c</fullName>
    <label>More Actions Link</label>
    <type>TextArea</type>
</CustomField>