force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__More_Actions_win_width__c.field-meta.xml
<CustomField>
    <fullName>zaapit__More_Actions_win_width__c</fullName>
    <description>empty this field for auto-with</description>
    <label>More Actions win width</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>