force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__new_record_link__c.field-meta.xml
<CustomField>
    <fullName>zaapit__new_record_link__c</fullName>
    <inlineHelpText>use {ID} in the url for the current parentid (usefull for related lists)</inlineHelpText>
    <label>new record link</label>
    <type>TextArea</type>
</CustomField>