force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__newRecordLinkNum__c.field-meta.xml
<CustomField>
    <fullName>zaapit__newRecordLinkNum__c</fullName>
    <description>003 is for contact - newRecordLinkNum
006 is for opportunity
press a regular new and see</description>
    <label>newRecordLinkNum</label>
    <type>TextArea</type>
</CustomField>