force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__Open_TextArea_in_a_dialog__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Open_TextArea_in_a_dialog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Open Text Area in a dialog</description>
    <label>Open TextArea in a dialog</label>
    <type>Checkbox</type>
</CustomField>