force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__removeAutoNameFromExport__c.field-meta.xml
<CustomField>
    <fullName>zaapit__removeAutoNameFromExport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remove Auto Name field From Export (for no-name tables)</description>
    <label>removeAutoNameFromExport</label>
    <type>Checkbox</type>
</CustomField>