force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__showCheckBoxes__c.field-meta.xml
<CustomField>
    <fullName>zaapit__showCheckBoxes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>show Check Boxes next to the actions</description>
    <inlineHelpText>show Check Boxes next to the actions</inlineHelpText>
    <label>showCheckBoxes</label>
    <type>Checkbox</type>
</CustomField>