force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__showCountOnExport__c.field-meta.xml
<CustomField>
    <fullName>zaapit__showCountOnExport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>showCountOnExport</label>
    <type>Checkbox</type>
</CustomField>