force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__showDeleteSelectedViewMode__c.field-meta.xml
<CustomField>
    <fullName>zaapit__showDeleteSelectedViewMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Delete Selected on View Mode</description>
    <label>showDeleteSelectedViewMode</label>
    <type>Checkbox</type>
</CustomField>