force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__showMassDeleteAll__c.field-meta.xml
<CustomField>
    <fullName>zaapit__showMassDeleteAll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show mass delete all button</description>
    <label>showMassDeleteAll</label>
    <type>Checkbox</type>
</CustomField>