force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__showRegButtons__c.field-meta.xml
<CustomField>
    <fullName>zaapit__showRegButtons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>showRegButtons</label>
    <type>Checkbox</type>
</CustomField>