force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__showUserGuideLink__c.field-meta.xml
<CustomField>
    <fullName>zaapit__showUserGuideLink__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show User Guide Link on the top of table</description>
    <label>showUserGuideLink</label>
    <type>Checkbox</type>
</CustomField>