force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__sortBy2__c.field-meta.xml
<CustomField>
    <fullName>zaapit__sortBy2__c</fullName>
    <label>Sort By #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>