force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__SortBy3__c.field-meta.xml
<CustomField>
    <fullName>zaapit__SortBy3__c</fullName>
    <label>Sort By #3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>