force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__sortDir3__c.field-meta.xml
<CustomField>
    <fullName>zaapit__sortDir3__c</fullName>
    <label>sortDir3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>