force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__table__c.field-meta.xml
<CustomField>
    <fullName>zaapit__table__c</fullName>
    <description>The real table to use</description>
    <label>table</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>