force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__table_ref__c.field-meta.xml
<CustomField>
    <fullName>zaapit__table_ref__c</fullName>
    <label>table_ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>