force-app/main/default/objects/zaapit__zaapit_editable_table2__c/fields/zaapit__title__c.field-meta.xml
<CustomField>
    <fullName>zaapit__title__c</fullName>
    <description>The table title</description>
    <inlineHelpText>The table title</inlineHelpText>
    <label>title</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>